First version of styles

--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lato:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <title>Simpsons newspaper</title>
 </head>
 <body>
   <div class="newsletter">
+
     <section class="name">
-      <p>Springfield Shopper</p>
+      <p class="name__text">Springfield Shopper</p>
     </section>
+
     <section class="info">
-      <p>DAILY NEWS</p>
-      <p>35¢</p>
+      <p class="info__text">DAILY NEWS</p>
+      <p class="info__price">35¢</p>
     </section>
+
     <section class="title">
-      <h1>
+      <h1 class="title__text">
         <span>Simpsons scam</span>
         <span>Springfield</span>
       </h1>
     </section>
+
     <section class="content">
-      <article class="left-side">
-        <h2>
+      <article class="content__left-side">
+        <h2 class="content__title">
           <span>Angry Mob</span>
           <span>Mulls Options</span>
         </h2>
-        <div>
+        <div class="content__text">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatem sit eaque, repudiandae mollitia esse labore iste sed? Magnam alias recusandae quaerat velit debitis natus repellat voluptatum neque aut doloremque?</p>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At voluptatem sit eaque, repudiandae mollitia esse labore iste sed? Magnam alias recusandae quaerat velit debitis natus repellat voluptatum neque aut doloremque?</p>
         </div>
       </article>
-      <article class="right-side">
-        <img src="https://i.ibb.co/f8SdZ9Y/Screen-Shot-2021-04-09-at-2-28-04-PM.png" alt="Foto de la familia Simpson">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur tenetur eos neque, sint officiis asperiores quia id accusamus illo odit. Quae voluptates adipisci rem eum tempore quas optio eius itaque?</p>
+      <article class="content__right-side">
+        <img class="content__img" src="https://i.ibb.co/f8SdZ9Y/Screen-Shot-2021-04-09-at-2-28-04-PM.png" alt="Foto de la familia Simpson">
+        <p class="content__text-img">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur tenetur eos neque, sint officiis asperiores quia id accusamus illo odit. Quae voluptates adipisci rem eum tempore quas optio eius itaque?</p>
       </article>
     </section>
+
   </div>
 </body>
 </html>
